--- a/src/app/features/components/repair-sheet/repair-sheet.component.scss
+++ b/src/app/features/components/repair-sheet/repair-sheet.component.scss
@@ -180,7 +180,7 @@
           }
 
           span {
-            font-size: var(--caption-font-size);
+            font-size: var(--font-size-sm);
           }
         }
 
