--- a/src/app/shared/detail-shared/path-display/path-display.component.scss
+++ b/src/app/shared/detail-shared/path-display/path-display.component.scss
@@ -45,7 +45,7 @@
       min-width: 0;
 
       .path-label {
-        font-size: var(--caption-font-size);
+        font-size: var(--font-size-sm);
         color: var(--secondary-text-color);
         font-weight: 500;
         margin-bottom: 4px;
