--- a/src/app/shared/components/password-manager/password-manager.component.scss
+++ b/src/app/shared/components/password-manager/password-manager.component.scss
@@ -92,7 +92,7 @@
         display: flex;
         align-items: center;
         gap: var(--space-xs);
-        font-size: var(--caption-font-size);
+        font-size: var(--font-size-sm);
         color: var(--text-secondary);
         line-height: 1.4;
 
