--- a/src/app/shared/detail-shared/job-info-panel/job-info-panel.component.scss
+++ b/src/app/shared/detail-shared/job-info-panel/job-info-panel.component.scss
@@ -35,7 +35,7 @@
 }
 
 .detail-label {
-  font-size: var(--caption-font-size);
+  font-size: var(--font-size-sm);
   color: var(--secondary-text-color);
   font-weight: 500;
   text-transform: uppercase;
